# Die_Laboraufgabe_5

./: .gitmodules  CMakeLists.txt
.github/workflows/: CI.yml
gtests/: Testfile.cpp
